--- a/.github/workflows/delete-last-release.yml
+++ b/.github/workflows/delete-last-release.yml
@@ -9,23 +9,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Get list of releases
+      - name: Get last tag name
         run: |
-          json=$(gh api repos/maumuller/react-valisk/releases --jq -r '.[]');
-          json2=$(gh api repos/maumuller/react-valisk/releases --jq -r '.[].tag_name');
+          json=$(gh api repos/maumuller/react-valisk/releases --jq '.[].tag_name');
           echo $json;
-          echo $json2;
-          echo 'VERSION_PACKAGE='v$json >> $GITHUB_ENV
-
-      - name: Get package version
-        run: |
-          versionNumber="$(cat package.json | jq -r '.version')";
-          echo 'VERSION_PACKAGE='v$versionNumber >> $GITHUB_ENV
+          echo 'VERSION_PACKAGE='$json >> $GITHUB_ENV
 
       - name: Show Version versionNumber
         run: echo "A versão é $VERSION_PACKAGE"
 
-      # - name: Delete realease
-      #   run: gh release delete $VERSION_PACKAGE --cleanup-tag -y
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Delete realease
+        run: gh release delete $VERSION_PACKAGE --cleanup-tag -y
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
