--- a/.github/workflows/publish-package-and-release.yml
+++ b/.github/workflows/publish-package-and-release.yml
@@ -46,7 +46,7 @@ jobs:
         run: npm ci
 
       - name: Publish on Github
-        if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
+        # if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
