--- a/.github/workflows/publish-package-and-release.yml
+++ b/.github/workflows/publish-package-and-release.yml
@@ -46,7 +46,7 @@ jobs:
         run: npm ci
 
       - name: Publish on Github
-        # if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
+        if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -59,28 +59,28 @@ jobs:
       - name: Show last package version
         run: echo "VERSION_PACKAGE="v${{ needs.get_package_version.outputs.version_package }} >> $GITHUB_ENV
 
-      # - name: Account Configuration
-      #   run: |
-      #     git config --global user.email "mauriciomuller2012@gmail.com" &&
-      #     git config --global user.name "maummuler"
+      - name: Account Configuration
+        run: |
+          git config --global user.email "mauriciomuller2012@gmail.com" &&
+          git config --global user.name "maummuler"
 
-      # - name: Setup Node
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: "16.x"
-      #     registry-url: "https://registry.npmjs.org"
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16.x"
+          registry-url: "https://registry.npmjs.org"
 
-      # - name: Checkout code
-      #   uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      # - name: Install Dependences
-      #   run: npm ci
+      - name: Install Dependences
+        run: npm ci
 
-      # - name: Publish on NPM
-      #   if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
-      #   run: npm publish --access public
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.PUBLISH_NPM }}
+      - name: Publish on NPM
+        if: ${{ env.VERSION_PACKAGE != 'v0.0.0' }}
+        run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.PUBLISH_NPM }}
 
   create_realese:
     runs-on: ubuntu-latest
