--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,15 @@
-./src/App.*
-./src/*.css
-./vite.config.ts
-./index.html
-./github
-LINCENSE.md
+index.html
+src/App.tsx
+src/index.tsx
+src/index.css
+
+vite.config.ts
+CHANGELOG.md
+tsconfig.json
+tsconfig.node.json
+
+scripts
+node_modules
+.github
 .gitignore
+.npmrc
