--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "downgrade": "npm version 0.0.0",
     "log": "ts-node-esm ./scripts/generateLog.ts",
     "update": "ts-node-esm ./scripts/updatePackage.ts",
-    "commit": "ts-node-esm ./scripts/generateLog.ts && gitmoji -c"
+    "commit": "ts-node-esm ./scripts/generateLog.ts && git add . && gitmoji -c"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -43,7 +43,6 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
-    "concurrently": "^7.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
