--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "updateLinux": "bash ./scripts/updatePackage.sh",
     "downgrade": "npm version 0.0.0",
     "log": "ts-node-esm ./scripts/generateLog.ts",
-    "update": "ts-node-esm ./scripts/updatePackage.ts",
+    "update": "ts-node-esm ./scripts/updatePackage.ts && ts-node-esm ./scripts/generateRelease.ts",
     "commit": "ts-node-esm ./scripts/generateLog.ts && git add . && gitmoji -c"
   },
   "dependencies": {
